# dv_agent

./: .dockerignore  .env.example  .env.memory.example  .env.production.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.rag.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  task.md
config/: agents.yaml  llm.yaml  mcp.yaml  memory.yaml  rag.yaml
deploy/: docker-compose.apisix.yaml  nginx.conf  prometheus.yml  redis.conf
deploy/apisix/: apisix.yaml  config.yaml
deploy/ssl/: README.md
docs/: DATABASE_INIT_GUIDE.md  ENV_CONFIG_COMPARISON.md  RAG_TEST_PLAN.md
examples/: rag_usage_example.py
frontend/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.api.ts  chat.api.ts  rag.api.ts  session.api.ts
frontend/src/hooks/: useRagWebSocket.ts  useWebSocket.ts
frontend/src/lib/: apiClient.ts  websocket.ts
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: agentStore.ts  authStore.ts  chatStore.ts  ragStore.ts  sessionStore.ts
frontend/src/test/: setup.ts  utils.tsx
migrations/: 003_add_collections_table.sql
openspec/changes/agent-memory-system/: design.md  proposal.md  tasks.md
openspec/changes/dv-agent-core/: design.md  proposal.md  tasks.md
openspec/changes/gateway-frontend-layer/: design.md  proposal.md  tasks.md
openspec/changes/rag-retrieval-layer/: design.md  proposal.md  tasks.md
scripts/: deploy.bat  dev.bat  init_milvus.py  init_minio.py  init_postgres.sql  init_rag_milvus.py  init_rag_postgres.sql  init_users.sql  migrate_rag_documents.py  migrate_rag_documents.sql  run_migration.py  verify_db_schema.py
src/dv_agent/: __init__.py  app.py  cli.py  main.py  server.py
src/dv_agent/a2a/: __init__.py  client.py  models.py  server.py
src/dv_agent/agents/: __init__.py  base_agent.py  react_loop.py
src/dv_agent/auth/: __init__.py  dependencies.py  jwt.py  models.py  repository.py  router.py  security.py  service.py
src/dv_agent/config/: __init__.py  exceptions.py  logging.py  settings.py
src/dv_agent/context/: __init__.py  context_builder.py  entity_memory.py  history_manager.py  observation_truncator.py  prompt_template.py  rag_context_retriever.py  token_counter.py
src/dv_agent/intent/: __init__.py  models.py  recognizer.py  router.py
src/dv_agent/llm_gateway/: __init__.py  gateway.py  (+5 more)
tests/: __init__.py  conftest.py  test_intent.py  test_llm_gateway.py  test_rag_integration.py  test_session.py  test_tools.py
tests/memory/: __init__.py  conftest.py  test_integration.py  test_lifecycle.py  test_retrieval.py  test_short_term.py  test_unified_retriever.py
tests/rag/: __init__.py  test_benchmark.py  test_embedding.py  test_pipeline.py  test_retrieval.py  test_store.py
(+109 files in other folders)
